@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.eclipse.jetty.ee9</groupId>
     <artifactId>jetty-ee9-tests</artifactId>
-    <version>12.0.5-SNAPSHOT</version>
+    <version>12.0.11-SNAPSHOT</version>
   </parent>
   <artifactId>jetty-ee9-test-client-transports</artifactId>
   <packaging>jar</packaging>
@@ -101,9 +101,9 @@
 
   <profiles>
     <profile>
-      <id>enable-incubator-foreign</id>
+      <id>enable-foreign</id>
       <activation>
-        <jdk>[17,19)</jdk>
+        <jdk>[22,)</jdk>
       </activation>
       <build>
         <plugins>
@@ -112,8 +112,7 @@
             <configuration>
               <argLine>@{argLine}
                 ${jetty.surefire.argLine}
-                --add-modules jdk.incubator.foreign
-                --enable-native-access ALL-UNNAMED</argLine>
+                --enable-native-access org.eclipse.jetty.quic.quiche.foreign</argLine>
             </configuration>
           </plugin>
         </plugins>
